lab6/api/api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
