lab6/api/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: poi
  labels:
    app: poi
    role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
        role: api
    spec:
      securityContext:
        allowPrivilegeEscalation: false
      containers:
        - name: poi
          image: registryolq8408.azurecr.io/tripinsights/poi:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
