lab6/api/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: trips
  labels:
    app: trips
    role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
        role: api
    spec:
      containers:
        - name: trips
          image: registryolq8408.azurecr.io/tripinsights/trips:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
