lab6/api/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
    role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
        role: api
    spec:
      containers:
        - name: user-java
          image: registryolq8408.azurecr.io/tripinsights/user-java:1.0
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
          nodeSelector:
            beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
