lab6/api/net-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-policy
  namespace: api
spec:
  podSelector:
    matchLabels:
      role: api
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          role: web
